client/views/find/find.import.less
.find {
	.container;

	h1 {
		margin-top: 0;

		@media @mobile {
			font-size: x-large;
			margin: 20px 0 10px;
		}
	}

	.search {
		.grid(12);
		padding: 0;

		.search_field {
			.grid(12, inherit, 5);
			padding: 0 0 15px;

			input.searchInput {
				.form-control-humble;
				font-size: large;
				height: 38px;
			}

			button.-findButton {
				.btn;
				.btn-success;
				padding: 8px 12px !important;
			}

			button.filter-toggle-btn {
				.btn;
				.btn-primary;
				padding: 8px 12px !important;
			}
		}

		.search_filter {
			.grid(12, inherit, 7);
			padding: 0 0 0 15px;

			* {
				.transition(0.5s);
			}

			h4,
			h5 {
				color: @brand-primary;
			}

			.search_filter_header {
				.grid(12);
				border-bottom: 1px solid @light-blue;
				color: @brand-primary;
				padding: 0;

				h4 {
					margin-top: 8px;
				}
			}

			.search_events {
				.grid(12, 4);
				margin-bottom: 10px;
				padding: 0;

				.checkbox {
					label {
						padding: 0;

						&:hover {
							color: @brand-primary;
						}
					}

					input#hasUpcomingEvent {
						display: none;
					}

					.eventcaption_upcoming {
						background: @light-blue;
						display: inline-block;
						height: 20px;
						position: relative;
						vertical-align: bottom;
						width: 28px;

						.eventcaption_upcoming_box {
							background: @brand-success;
							height: 10px;
							position: absolute;
							right: 0;
							top: 0;
							width: 7px;

							.eventcaption_upcoming_text {
								background: #333;
								left: 2px;
								height: 1px;
								position: absolute;
								width: 3px;

								&.first-line {
									top: 2px;
								}

								&.second-line {
									top: 4px;
								}

								&.third-line {
									top: 6px;
								}
							}
						}
					}

					span.fa-toggle-off,
					span.fa-toggle-on {
						color: @brand-primary;
					}

					span.checked {
						background: @brand-danger;
						color: #751313;

						&.glyphicon-home {
							padding: 4px 17px 2px;
						}

						&.fa-graduation-cap {
							padding: 4px 15px 2px;
						}
					}
				}
			}

			.filter_categories {
				.grid(12, 4);
				margin-bottom: 10px;
				padding: 0;

				h5 {
					margin-top: 0;
				}

				.category_select {
					margin-bottom: 10px;

					a.dropdown-toggle {
						background: rgba(216, 216, 216, 0.5);
						color: @brand-primary;
						padding: 2px 5px;

						&:hover {
							color: @brand-primary;
							cursor: pointer;
							text-decoration: none;
						}

						span.glyphicon-plus {
								font-size: small;
						}
					}

					ul.dropdown-menu {
						background: #ededed;
						margin-top: 6px;

						li {
							&:hover {
								background: darken(#ededed, 5%);
							}

							&> * {
								color: @brand-primary;
								display: inline-block;
							}
						}

						a {
							&:hover {
								background: none;
							}

							&.category.parent {
								padding-right: 0;
							}
						}

						.show_subcategories {
							color: rgb(177, 184, 184);
							padding-right: 20px;

							&:hover {
								color: @brand-primary !important;
							}
						}
					}

					li.subcategory {
						display: none;
						margin-left: 20px;

						a {
							border-left: 1px solid @brand-primary;
							padding-left: 10px;
						}
					}
				}

				ul.selected_categories {
					list-style: none;
					margin: 0;
					padding-left: 0;

					li {
						margin-bottom: 3px;
						padding: 0 3px 3px 0;
					}

					span.category {
						background: rgba(216, 216, 216, 0.5);
						color: @brand-primary;
						padding: 2px 5px;
					}
				}
			}

			.filter_groups {
				.grid(12, 4);
				margin-bottom: 10px;
				padding: 0;

				h5 {
					color: #333;
				}

				span.group {
					background: rgba(130, 216, 130, 0.5);
					color: @brand-primary;
					margin-bottom: 10px;
					padding: 2px 5px;
				}
			}

			span.glyphicon-remove {
				color: lighten(@brand-danger, 20%);
				cursor: pointer;
				position: relative;
				top: 2px;

				&:hover {
					color: @brand-danger;
				}
			}
		}
	}
}

